k8s/apps/metabase/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase
  namespace: apps
spec:
  selector:
    app: metabase
  ports:
    - port: 80
      targetPort: 3000
