k8s/apps/metabase/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: metabase
  namespace: apps
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`metabase.tugy.dev`)
      kind: Rule
      services:
        - name: metabase
          port: 80
